--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@ pagination:
         </picture>
         {%- endif %}
         <div>
-          {{ post.body }}
+          {{ post.content }}
         </div>
       </li>
       {% endfor -%}
