--- a/src/post.html
+++ b/src/post.html
@@ -6,15 +6,17 @@ pagination:
   alias: post
 permalink: "posts/{{ post.slug }}/"
 eleventyComputed:
+  description: "{{post.description}}"
   title: "{{post.title}}"
+  img: "{{post.mainImage}}"
 ---
 
-<div class="singlepage">
+<div class="singlepage center-content">
   <div class="container">
       <div >
-          <div class="spaced">
+          <h1 class="f6 spaced sans">
               <a href="/"><span class="triangle"></span> Israel Pants on Fire</a>
-          </div>
+          </h1>
           <h6 class="f6 spaced">{{ post.title }}</h6>
           {%- if post.mainImage %}
           <picture class="image">
