--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,11 @@
 ---
 layout: "base"
-title: "Homepage"
+title: "Home"
+description: "Nothing justified October seven, but October seven justifies everything!"
+img: "https://israelpantsonfire.com/assets/images/pofbg.jpg"
 pagination:
   data: posts
-  size: 20
+  size: 30
 ---
 
 {% include './home.html' %}
