addded tweet link

--- a/src/post.html
+++ b/src/post.html
@@ -27,6 +27,7 @@ eleventyComputed:
             {{ post.content }}
           </div>
       </div>
+      <a class="twitter-share-button" href="{{ post.tweet }}" target="_blank"><i class="liga">link</i></a>
   </div>
 </div>
 
