--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 layout: "base"
 title: "Home"
 description: "Nothing justified October seven, but October seven justifies everything!"
-img: "https://israelpantsonfire.com/assets/images/pofbg.jpg"
+img: "https://israelpantsonfire.com/assets/images/poficon.png"
 pagination:
   data: posts
   size: 30
